fixing up code, display score working

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
         <main>
             <section>
                 <div class="quiz-container">
-                    <div id="quizBox" class="large-font"></div>
+                    <h2 id="questions"></h2>
+                    <div id="quizBox"></div>
                     <button id="startBtn">Start!</button>
-                    <button id="prevBtn" style="display: none;">Previous Question</button>
-                    <button id="nextBtn" style="display: none;">Next Question</button>
                     <button id="submitBtn" style="display: none;">Submit Quiz</button>
                     <div id="results" class="medium-font"></div>
                 </div>
