--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
 <body>
     <header>
         <div class="large-font">
-            <h1>JavaScript Quiz Game!</h1>
+            <h1>JavaScript Quiz!</h1>
         </div>
     </header>
     <main>
-        <div id="results" class="container"></div>
+        <div id="results" class="results-container"></div>
         <section>
-            <div class="container">
+            <div class="quiz-container">
                 <h2 id="questions"></h2>
                 <div id="quizBox"></div>
                 <button id="startBtn">Start!</button>
                 <button id="submitBtn" style="display: none;">Submit Quiz</button>
             </div>
         </section>
-        <section>
-
+        <aside>
             <div class="timer">
                 <div class="timer-text">
                     <div class="large-font" id="timer-count">60</div>
@@ -33,7 +32,7 @@
                 </div>
             </div>
             <button type="submit" class="resetBtn" onClick="refreshQuiz()">Try Again?</button>
-        </section>
+        </aside>
     </main>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src=".\assets\script.js"></script>
