--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" type="text/css" href=".\assets\style.css">
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 
 <body>
@@ -35,7 +34,7 @@
             <button type="submit" class="resetBtn" onClick="refreshQuiz()">Try Again?</button>
         </aside>
     </main>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js" type="text/javascript"></script>
     <script src=".\assets\script.js"></script>
 </body>
 
